new pages added

--- a/home.html
+++ b/home.html
@@ -41,12 +41,16 @@
             position: relative;
         }
 
-        h1, h2, h3, h4, h5, h6 {
+        h1, h2, h4, h5, h6 {
             font-family: HelveticaNeue63;
 
             display: flex;
 
             align-items: center;
+        }
+
+        h3 {
+            font-family: HelveticaNeue45;
         }
 
         a {
@@ -143,8 +147,6 @@
 
             /* left: 10%;
             bottom: 10%; */
-
-            width: 50%;
 
             color: #FFFFFF;
         }
@@ -368,7 +370,7 @@
     <section style="background: #3A2511;">
         <div id='section-1-title' class="left bottom">
             <h1>NEW COLLECTION</h1>
-            <p>Our easiest chuck-on-and-go staples come with a serious style heritage that’s liberating, sexy, comfy and supremely cool.</p>
+            <p>Our easiest chuck-on-and-go staples come with a serious style heritage <br> that’s liberating, sexy, comfy and supremely cool.</p>
             <a>SHOP NEW ARRIVALS</a>
         </div>
     </section>
@@ -376,7 +378,7 @@
         <div id='section-1-title' class="left top">
             <h1>VINTAGE INSPIRED</h1>
             <p>
-                Inspired by the ‘70s and 80’s), we know that if you sift through
+                Inspired by the ‘70s and 80’s), we know that if you sift through <br>
                 our vintage inspired collection you’re gonna rock the perfect silhouette.
              </p>
             <a>SHOP NOW</a>
@@ -396,7 +398,7 @@
     <section style="background: #C9CB7B;">
         <div id='section-1-title' class="left top">
             <h1>SUSTAINABLE DENIM</h1>
-            <p>What started as a true ‘80s vintage pair of jeans, finished as a re-energised, wider leg vintage jean with versatile detailing. </p>
+            <p>What started as a true ‘80s vintage pair of jeans, <br> finished as a re-energised, wider leg vintage jean with versatile detailing. </p>
             <a>SHOP DENIM</a>
         </div>
     </section>
