--- a/sign-up.html
+++ b/sign-up.html
@@ -71,8 +71,8 @@
         }
 
         main {
-            height: 100vh;
-            width: 100vw;
+            height: 100%;
+            width: 100%;
 
             display: flex;
 
