--- a/bag-modal.html
+++ b/bag-modal.html
@@ -130,6 +130,8 @@
                 #checkout-button {
                     background: black;
 
+                    color: white;
+
                     margin-top: 5px;
                 }
 
